deployment/book-store/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-store
  labels:
    name: book-store
