deployment/book-store/k8s/05-app-authors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-authors
  labels:
    app: app-authors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-authors
  template:
    metadata:
      labels:
        app: app-authors
    spec:
      containers:
      - name: app-authors
        image: augustouce/app-authors-tg:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-authors
  labels:
    app: app-authors
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app-authors
