deployment/book-store/k8s/05-app-authors.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-authors
  labels:
    app: app-authors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-authors
  template:
    metadata:
      labels:
        app: app-authors
      annotations:
        consul.hashicorp.com/connect-inject: "false"
    spec:
      containers:
        - name: app-authors
          image: augustouce/app-authors-tg:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: app-authors
  labels:
    app: app-authors
  annotations:
    traefik.enable: "true"
    traefik.http.routers.authors.rule: "PathPrefix(`/authors`)"
    traefik.http.services.authors.loadbalancer.server.port: "8080"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app-authors
