deployment/book-store/k8s/07-app-web-vaadin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web-vaadin
  labels:
    app: app-web-vaadin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web-vaadin
  template:
    metadata:
      labels:
        app: app-web-vaadin
    spec:
      containers:
      - name: app-web-vaadin
        image: jjarteaga/app-web-vaadin-tg:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-web-vaadin
  labels:
    app: app-web-vaadin
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app-web-vaadin
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-web-vaadin
  labels:
    app: app-web-vaadin
spec:
  host: vaadin.apps.openshift.example.com
  to:
    kind: Service
    name: app-web-vaadin
    weight: 100
  port:
    targetPort: http
