deployment/book-store/k8s/08-prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus

  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus
            - name: prometheus-storage
              mountPath: /prometheus
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: prometheus-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus

  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app: prometheus
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus

  labels:
    app: prometheus
spec:
  host: prometheus.apps.openshift.example.com
  to:
    kind: Service
    name: prometheus
    weight: 100
  port:
    targetPort: http
